# OS_Chernyayev

./: README.md  os_labs.code-workspace
lab1/: CMakeLists.txt  README.md  calculon.c  main.c  manager.c  manager.h  shared_data.c  shared_data.h
lab2/: README.md  pom.xml
lab2/src/main/java/com/ontko/moss/: Common.java  Process.java  Results.java  Scheduling.java  SchedulingAlgorithm.java  sProcess.java
lab2/src/test/java/com/ontko/moss/: AppTest.java
trialfuncs/: CMakeLists.txt
trialfuncs/test/: CMakeLists.txt  lab1.c
